# Django-Packages

./: README.md
django-chat-app/: MANIFEST.in  README.rst  setup.cfg
django-chat-app/chat_app/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
django-chat-app/chat_app/migrations/: 0001_initial.py  0002_alter_chatroom_name.py
django-chat-app/chat_app/static/css/: chat_styles.css
django-chat-app/chat_app/static/js/: chat_main.js
django-chat-app/chat_app/templates/: chat_home copy.html  chat_home.html  chat_room copy.html  chat_room.html
django-user-auth/: MANIFEST.in  README.rst  setup.cfg
django-user-auth/user_auth/: admin.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
django-user-auth/user_auth/migrations/: 0001_initial.py  0002_myuser_groups_myuser_is_active_myuser_is_staff_and_more.py  0003_alter_myuser_dob.py  0004_myuser_username_alter_myuser_first_name_and_more.py
django-user-auth/user_auth/static/css/: user_style.css
django-user-auth/user_auth/static/js/: user_main.js
django-user-auth/user_auth/templates/: base_form.html  login.html  my_password_reset_complete.html  my_password_reset_confirm.html  my_password_reset_done.html  my_password_reset_email.html  my_password_reset_form.html  register.html
