[metadata]
name = django-chat-app
version = 0.1
description = A Real-time chatting application.
long_description = file: README.rst
url = https://www.example.com/
author = Sudi Abdalla
author_email = sudaise18@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    asgiref >= 3.6.0
    async-timeout >= 4.0.2
    autobahn >= 23.1.1
    channels >= 4.0.0
    daphne >= 4.0.0
    Django >= 4.1
    idna >= 3.4
    Pillow >= 9.4.0
    six >= 1.16.0
    sqlparse >= 0.4.3
    tomli >= 2.0.1
    websockets >= 9.1
